feat: implement interactive Leaflet map, premium dual-card Chart.js stats, and resolve compiler warnings